--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,7 +40,7 @@ dependencies:
   centrifuge: ^0.9.1
   responsive_grid: ^2.1.0
   flutter_vlc_player: ^7.1.5
-  dart_vlc: ^0.0.7
+  flutter_bootstrap: ^2.0.0
 
 dev_dependencies:
   flutter_test:
@@ -64,9 +64,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
